--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require font-awesome
+ *= require bootstrap_and_overrides
+ *= require dataTables.bootstrap
+ *= require sb-admin-2.css
+ *= require dataTables.responsive
+ *= require metisMenu
  *= require_tree .
  *= require_self
  */
