Add layout skeleton to views

--- a/app/views/release_mains/index.html.erb
+++ b/app/views/release_mains/index.html.erb
@@ -1,3 +1,11 @@
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Instance Dashboard</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+
+<!-- baked in to rails -->
 <p id="notice"><%= notice %></p>
 
 <h1>Release Mains</h1>
@@ -20,6 +28,88 @@
   </tbody>
 </table>
 
-<br>
-
 <%= link_to 'New Release Main', new_release_main_path %>
+<br>
+<!-- / baked in to rails -->
+
+<!-- /.row -->
+<div class="row">
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-12 text-left">
+                        <div class="huge">App Name</div>
+                        <div>Some vital stats</div>
+                    </div>
+                </div>
+            </div>
+            <!-- place into partial for reuse -->
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">View Details</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-green">
+            <div class="panel-heading">
+              <div class="row">
+                  <div class="col-xs-12 text-left">
+                      <div class="huge">App Name</div>
+                      <div>Some vital stats</div>
+                  </div>
+              </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">View Details</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-yellow">
+            <div class="panel-heading">
+              <div class="row">
+                  <div class="col-xs-12 text-left">
+                      <div class="huge">App Name</div>
+                      <div>Some vital stats</div>
+                  </div>
+              </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">View Details</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+    <div class="col-lg-3 col-md-6">
+        <div class="panel panel-red">
+            <div class="panel-heading">
+              <div class="row">
+                  <div class="col-xs-12 text-left">
+                      <div class="huge">App Name</div>
+                      <div>Some vital stats</div>
+                  </div>
+              </div>
+            </div>
+            <a href="#">
+                <div class="panel-footer">
+                    <span class="pull-left">View Details</span>
+                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
+                    <div class="clearfix"></div>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+<!-- /.row -->
