--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -1,7 +1,11 @@
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Releases</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+
 <p id="notice"><%= notice %></p>
-
-<h1>Releases</h1>
-
 <table>
   <thead>
     <tr>
@@ -12,16 +16,93 @@
 
   <tbody>
     <% @releases.each do |release| %>
-      <tr>
-        <td><%= release.release_main %></td>
-        <td><%= link_to 'Show', release %></td>
-        <td><%= link_to 'Edit', edit_release_path(release) %></td>
-        <td><%= link_to 'Destroy', release, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <tr>
+      <td><%= release.release_main %></td>
+      <td><%= link_to 'Show', release %></td>
+      <td><%= link_to 'Edit', edit_release_path(release) %></td>
+      <td><%= link_to 'Destroy', release, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
 <%= link_to 'New Release', new_release_path %>
+
+
+<!-- bootstrap table -->
+<div class="panel-body">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="table-responsive">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Date</th>
+                            <th>Time</th>
+                            <th>Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>3326</td>
+                            <td>10/21/2013</td>
+                            <td>3:29 PM</td>
+                            <td>$321.33</td>
+                        </tr>
+                        <tr>
+                            <td>3325</td>
+                            <td>10/21/2013</td>
+                            <td>3:20 PM</td>
+                            <td>$234.34</td>
+                        </tr>
+                        <tr>
+                            <td>3324</td>
+                            <td>10/21/2013</td>
+                            <td>3:03 PM</td>
+                            <td>$724.17</td>
+                        </tr>
+                        <tr>
+                            <td>3323</td>
+                            <td>10/21/2013</td>
+                            <td>3:00 PM</td>
+                            <td>$23.71</td>
+                        </tr>
+                        <tr>
+                            <td>3322</td>
+                            <td>10/21/2013</td>
+                            <td>2:49 PM</td>
+                            <td>$8345.23</td>
+                        </tr>
+                        <tr>
+                            <td>3321</td>
+                            <td>10/21/2013</td>
+                            <td>2:23 PM</td>
+                            <td>$245.12</td>
+                        </tr>
+                        <tr>
+                            <td>3320</td>
+                            <td>10/21/2013</td>
+                            <td>2:15 PM</td>
+                            <td>$5663.54</td>
+                        </tr>
+                        <tr>
+                            <td>3319</td>
+                            <td>10/21/2013</td>
+                            <td>2:13 PM</td>
+                            <td>$943.45</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.table-responsive -->
+        </div>
+        <!-- /.col-lg-4 (nested) -->
+        <div class="col-lg-8">
+            <div id="morris-bar-chart"></div>
+        </div>
+        <!-- /.col-lg-8 (nested) -->
+    </div>
+    <!-- /.row -->
+</div>
