Getting action cable to work

--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Release main:</strong>
-  <%= @release.release_main %>
+  <%= @release.uuid %>
 </p>
 
 <%= link_to 'Edit', edit_release_path(@release) %> |
