--- a/app/views/release_mains/index.html.erb
+++ b/app/views/release_mains/index.html.erb
@@ -1,17 +1,20 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Release Mains</h1>
+<div id='release_mains'>
 
+</div>
 <table>
   <thead>
     <tr>
-      <th colspan="3"></th>
+      <th colspan="3">Main Release UUID</th>
     </tr>
   </thead>
 
   <tbody>
     <% @release_mains.each do |release_main| %>
       <tr>
+        <td><%= release_main.uuid %></td>
         <td><%= link_to 'Show', release_main %></td>
         <td><%= link_to 'Edit', edit_release_main_path(release_main) %></td>
         <td><%= link_to 'Destroy', release_main, method: :delete, data: { confirm: 'Are you sure?' } %></td>
