--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Release main</th>
+      <th>Release UUID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +13,7 @@
   <tbody>
     <% @releases.each do |release| %>
       <tr>
-        <td><%= release.release_main %></td>
+        <td><%= release.uuid %></td>
         <td><%= link_to 'Show', release %></td>
         <td><%= link_to 'Edit', edit_release_path(release) %></td>
         <td><%= link_to 'Destroy', release, method: :delete, data: { confirm: 'Are you sure?' } %></td>
