--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -6,111 +6,10 @@
     <!-- /.col-lg-12 -->
 </div>
 
-<!-- baked in to rails -->
-<p id="notice"><%= notice %></p>
-
-<h1>Instances</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @instances.each do |instance| %>
-    <tr>
-      <td><%= link_to 'Show', instance %></td>
-      <td><%= link_to 'Edit', edit_instance_path(instance) %></td>
-      <td><%= link_to 'Destroy', instance, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= link_to 'New Instance', new_instance_path %>
-<br>
-<!-- / baked in to rails -->
-
 <!-- /.row -->
 <div class="row">
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-12 text-left">
-                        <div class="huge">App Name</div>
-                        <div>Some vital stats</div>
-                    </div>
-                </div>
-            </div>
-            <!-- place into partial for reuse -->
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-green">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-yellow">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
+  <% @instances.each do |instance| %>
+    <%= render partial: "instance_box", locals: { instance: instance } %>
+  <% end %>
 </div>
 <!-- /.row -->
