--- a/app/views/release_mains/index.html.erb
+++ b/app/views/release_mains/index.html.erb
@@ -1,36 +1,17 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Instance Dashboard</h1>
+        <h1 class="page-header">Main Releases Dashboard</h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
 
-<!-- baked in to rails -->
-<p id="notice"><%= notice %></p>
-
-<h1>Release Mains</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @release_mains.each do |release_main| %>
-      <tr>
-        <td><%= link_to 'Show', release_main %></td>
-        <td><%= link_to 'Edit', edit_release_main_path(release_main) %></td>
-        <td><%= link_to 'Destroy', release_main, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= link_to 'New Release Main', new_release_main_path %>
-<br>
-<!-- / baked in to rails -->
+<!-- <% @release_mains.each do |release_main| %>
+  <tr>
+    <td><%= link_to 'Show', release_main %></td>
+    <td><%= link_to 'Edit', edit_release_main_path(release_main) %></td>
+    <td><%= link_to 'Destroy', release_main, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %> -->
 
 <!-- /.row -->
 <div class="row">
@@ -39,7 +20,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-12 text-left">
-                        <div class="huge">App Name</div>
+                        <div class="huge">Release Name</div>
                         <div>Some vital stats</div>
                     </div>
                 </div>
@@ -59,7 +40,7 @@
             <div class="panel-heading">
               <div class="row">
                   <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
+                      <div class="huge">Release Name</div>
                       <div>Some vital stats</div>
                   </div>
               </div>
@@ -78,7 +59,7 @@
             <div class="panel-heading">
               <div class="row">
                   <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
+                      <div class="huge">Release Name</div>
                       <div>Some vital stats</div>
                   </div>
               </div>
@@ -97,7 +78,7 @@
             <div class="panel-heading">
               <div class="row">
                   <div class="col-xs-12 text-left">
-                      <div class="huge">App Name</div>
+                      <div class="huge">Release Name</div>
                       <div>Some vital stats</div>
                   </div>
               </div>
