--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -5,30 +5,14 @@
     <!-- /.col-lg-12 -->
 </div>
 
-<p id="notice"><%= notice %></p>
-<table>
-  <thead>
-    <tr>
-      <th>Release main</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @releases.each do |release| %>
-    <tr>
-      <td><%= release.release_main %></td>
-      <td><%= link_to 'Show', release %></td>
-      <td><%= link_to 'Edit', edit_release_path(release) %></td>
-      <td><%= link_to 'Destroy', release, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-<%= link_to 'New Release', new_release_path %>
-
+<!-- <% @releases.each do |release| %>
+  <tr>
+    <td><%= release.release_main %></td>
+    <td><%= link_to 'Show', release %></td>
+    <td><%= link_to 'Edit', edit_release_path(release) %></td>
+    <td><%= link_to 'Destroy', release, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  </tr>
+<% end %> -->
 
 <!-- bootstrap table -->
 <div class="panel-body">
@@ -41,7 +25,7 @@
                             <th>#</th>
                             <th>Date</th>
                             <th>Time</th>
-                            <th>Amount</th>
+                            <th>Status</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -49,49 +33,49 @@
                             <td>3326</td>
                             <td>10/21/2013</td>
                             <td>3:29 PM</td>
-                            <td>$321.33</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3325</td>
                             <td>10/21/2013</td>
                             <td>3:20 PM</td>
-                            <td>$234.34</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3324</td>
                             <td>10/21/2013</td>
                             <td>3:03 PM</td>
-                            <td>$724.17</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3323</td>
                             <td>10/21/2013</td>
                             <td>3:00 PM</td>
-                            <td>$23.71</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3322</td>
                             <td>10/21/2013</td>
                             <td>2:49 PM</td>
-                            <td>$8345.23</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3321</td>
                             <td>10/21/2013</td>
                             <td>2:23 PM</td>
-                            <td>$245.12</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3320</td>
                             <td>10/21/2013</td>
                             <td>2:15 PM</td>
-                            <td>$5663.54</td>
+                            <td>Success</td>
                         </tr>
                         <tr>
                             <td>3319</td>
                             <td>10/21/2013</td>
                             <td>2:13 PM</td>
-                            <td>$943.45</td>
+                            <td>Success</td>
                         </tr>
                     </tbody>
                 </table>
