--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,4 +1,70 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_instance_path(@instance) %> |
-<%= link_to 'Back', instances_path %>
+<div class="row">
+    <div class="col-lg-12 text-center">
+        <h1 class="page-header">Instance: <%= @instance.name%></h1>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
+
+<div class="panel-body">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3>Instance Information</h3>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-striped">
+          <thead>
+            <tr>
+              <th>Instance ID #</th>
+              <th>Name</th>
+              <th>Created At</th>
+              <th>Deploy Status</th>
+              <th>Progress Status</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><%= @instance.id %></td>
+              <td><%= @instance.name%></td>
+              <td><%= @instance.created_at %></td>
+              <td><%= @instance.deploy_status %></td>
+              <td><%= @instance.progress_status %></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- /.table-responsive -->
+    </div>
+  </div>
+</div>
+
+<div class="panel-body">
+  <div class="row">
+    <div class="col-lg-12">
+      <h3>Instance Release Information</h3>
+      <div class="table-responsive">
+        <table class="table table-bordered table-hover table-striped">
+          <% @instance.releases.each do |release| %>
+            <thead>
+              <tr>
+                <th>Release ID #</th>
+                <th>Main Release ID #</th>
+                <th>Start Time</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><%= release.uuid %></td>
+                <td><%= release.release_main_id %></td>
+                <td><%= release.start_time %></td>
+              </tr>
+            </tbody>
+          <% end %>
+        </table>
+      </div>
+      <!-- /.table-responsive -->
+    </div>
+  </div>
+  
+  <%= link_to 'Back', instances_path %>
+</div>
