--- a/app/views/instances/_instance_box.html.erb
+++ b/app/views/instances/_instance_box.html.erb
@@ -1,42 +1,40 @@
 <!-- color classes = panel-green, panel-red, panel-yellow -->
 <!-- progress classes: progress-bar-success (green), -info is blue, -warning (orange), -danger (red) -->
 
-<div id="<%= "instance_#{instance.id}" %>" class="col-lg-3 col-md-6">
-    <div class="panel <%= instance_box_color_class(instance.deploy_status)%>">
-        <div class="panel-heading">
-            <div class="row">
-                <div class="col-xs-12 text-left">
-                    <div class="huge"><%= instance.name %></div>
-                    <div>
-                      Some statistic: <%= instance.name %>
-                    </div>
-                    <div>
-                      Some statistic: <%= instance.name %>
-                    </div>
-                    <div>
-                      Some statistic: <%= instance.name %>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- place into partial for reuse -->
-        <div class="panel-footer">
+<div class="panel <%= instance_box_color_class(instance.deploy_status)%>">
+  <div class="panel-heading">
+    <div class="row">
+      <div class="col-xs-12 text-left">
+          <div class="huge"><%= instance.name %></div>
           <div>
-            <div class="progress progress-striped active">
-              <!-- Change these values for the progress bar -->
-              <!-- aria-valuenow="70" style="width: 70%" -->
-              <div class="progress-bar <%= progress_bar_color_class(instance.progress_status) %>" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                <span class="sr-only">40% Complete (success)</span>
-              </div>
-            </div>
+            Some statistic: <%= instance.progress_status %>
           </div>
-            <span class="pull-left"><%= link_to 'Show Details', instance %></span>
-            <span class="pull-right">
-              <%= link_to instance do %>
-                <i class="fa fa-arrow-circle-right"></i>
-              <% end %>
-            </span>
-            <div class="clearfix"></div>
-        </div>
+          <div>
+            Deploy Status: <%= instance.deploy_status %>
+          </div>
+          <div>
+            Last Release Logs #: <%= instance.releases.last.logs.count %>
+          </div>
+      </div>
     </div>
+  </div>
+  <!-- place into partial for reuse -->
+  <div class="panel-footer">
+    <div>
+      <div class="progress progress-striped active">
+        <!-- Change these values for the progress bar -->
+        <!-- aria-valuenow="70" style="width: 70%" -->
+        <div class="progress-bar <%= progress_bar_color_class(instance.progress_status) %>" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+          <span class="sr-only">40% Complete (success)</span>
+        </div>
+      </div>
+    </div>
+      <span class="pull-left"><%= link_to 'Show Details', instance %></span>
+      <span class="pull-right">
+        <%= link_to instance do %>
+          <i class="fa fa-arrow-circle-right"></i>
+        <% end %>
+      </span>
+      <div class="clearfix"></div>
+  </div>
 </div>
