--- a/app/views/instances/index.html.erb
+++ b/app/views/instances/index.html.erb
@@ -8,7 +8,9 @@
 <!-- /.row -->
 <div class="row">
   <% @instances.each do |instance| %>
-    <%= render partial: "instance_box", locals: { instance: instance } %>
+    <div id="<%= "instance_#{instance.id}" %>" class="col-lg-3 col-md-6">
+      <%= render partial: "instance_box", locals: { instance: instance } %>
+    </div>
   <% end %>
 </div>
 <!-- /.row -->
