--- a/app/views/instances/_instance_box.html.erb
+++ b/app/views/instances/_instance_box.html.erb
@@ -7,13 +7,13 @@
       <div class="col-xs-12 text-left">
           <div class="huge"><%= instance.name %></div>
           <div>
-            Some statistic: <%= instance.progress_status %>
+            Current Status: <%= instance.progress_status %>
           </div>
           <div>
             Deploy Status: <%= instance.deploy_status %>
           </div>
           <div>
-            Last Release Logs #: <%= instance.releases.last.logs.count %>
+            Number of Logs for last Release: <%= instance.releases.last.logs.count %>
           </div>
       </div>
     </div>
@@ -24,7 +24,8 @@
       <div class="progress progress-striped active">
         <!-- Change these values for the progress bar -->
         <!-- aria-valuenow="70" style="width: 70%" -->
-        <div class="progress-bar <%= progress_bar_color_class(instance.progress_status) %>" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+        <% pct = progress_pct(instance.releases.last) %>
+        <div class="progress-bar <%= progress_bar_color_class(instance.progress_status) %>" role="progressbar" aria-valuenow="<%= pct %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= pct %>%">
           <span class="sr-only">40% Complete (success)</span>
         </div>
       </div>
