--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row">
     <div class="col-lg-12 text-center">
-        <h1 class="page-header">Instance: <%= @instance.name%></h1>
+        <h1 class="page-header">Instance: <%= @instance.name %></h1>
     </div>
     <!-- /.col-lg-12 -->
 </div>
@@ -54,7 +52,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><%= release.uuid %></td>
+                <td><%= link_to release.uuid, release_path(release) %></td>
                 <td><%= release.release_main_id %></td>
                 <td><%= release.start_time %></td>
               </tr>
@@ -65,6 +63,6 @@
       <!-- /.table-responsive -->
     </div>
   </div>
-  
+
   <%= link_to 'Back', instances_path %>
 </div>
