Add release main view

--- a/app/views/release_mains/index.html.erb
+++ b/app/views/release_mains/index.html.erb
@@ -5,92 +5,8 @@
     <!-- /.col-lg-12 -->
 </div>
 
-<!-- <% @release_mains.each do |release_main| %>
-  <tr>
-    <td><%= link_to 'Show', release_main %></td>
-    <td><%= link_to 'Edit', edit_release_main_path(release_main) %></td>
-    <td><%= link_to 'Destroy', release_main, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %> -->
-
-<!-- /.row -->
-<div class="row">
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-12 text-left">
-                        <div class="huge">Release Name</div>
-                        <div>Some vital stats</div>
-                    </div>
-                </div>
-            </div>
-            <!-- place into partial for reuse -->
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-green">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">Release Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-yellow">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">Release Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="col-lg-3 col-md-6">
-        <div class="panel panel-red">
-            <div class="panel-heading">
-              <div class="row">
-                  <div class="col-xs-12 text-left">
-                      <div class="huge">Release Name</div>
-                      <div>Some vital stats</div>
-                  </div>
-              </div>
-            </div>
-            <a href="#">
-                <div class="panel-footer">
-                    <span class="pull-left">View Details</span>
-                    <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                    <div class="clearfix"></div>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-<!-- /.row -->
+<% @release_mains.each do |release_main| %>
+  <div id="<%= "release_main_#{release_main.id}" %>" class="col-lg-4 col-md-6">
+    <%= render partial: "release_main_box", locals: { release_main: release_main } %>
+  </div>
+<% end %>
