--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -202,6 +202,9 @@
 
       <!-- Page wrapper -->
       <div id="page-wrapper">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+
         <%= yield %>
       </div>
       <!-- Page wrapper End -->
