--- a/app/views/releases/show.html.erb
+++ b/app/views/releases/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="instance_data" data-instance-id=<%= @release.instance.id %> data-release-id=<%= @release.id %> >
     <div class="col-lg-12 text-center">
         <h1 class="page-header">Instance: <%= @release.instance.name %></h1>
     </div>
