Adding instance id for data

--- a/app/views/instances/show.html.erb
+++ b/app/views/instances/show.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" id="instance_data" data-instance-id=<%= @instance.id %>>
     <div class="col-lg-12 text-center">
         <h1 class="page-header">Instance: <%= @instance.name %></h1>
     </div>
